changed position employment logic

--- a/src/main/resources/com/fitness/fragment/subscription/subscription.fxml
+++ b/src/main/resources/com/fitness/fragment/subscription/subscription.fxml
@@ -1,59 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<fx:root hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0"
+         xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
-      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
+      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS"/>
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints />
-      <RowConstraints valignment="TOP" vgrow="ALWAYS" />
-      <RowConstraints valignment="TOP" />
+      <RowConstraints/>
+      <RowConstraints valignment="TOP" vgrow="ALWAYS"/>
+      <RowConstraints valignment="TOP"/>
    </rowConstraints>
-   <children>
-      <Label styleClass="header1" text="Աբոնեմենտ" />
-      <ScrollPane fx:id="subscriptionsScrollPane" hbarPolicy="NEVER" maxHeight="400.0" maxWidth="800.0" minHeight="400.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="400.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
-         <content>
-            <GridPane alignment="CENTER" maxHeight="400.0" maxWidth="800.0" minHeight="400.0" minWidth="800.0" prefHeight="400.0" prefWidth="800.0">
-               <columnConstraints>
-                  <ColumnConstraints />
-               </columnConstraints>
-            </GridPane>
-         </content>
-      </ScrollPane>
-      <GridPane alignment="TOP_CENTER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+   <Label styleClass="header1" text="Աբոնեմենտ"/>
+   <ScrollPane fx:id="subscriptionsScrollPane" hbarPolicy="NEVER" maxHeight="400.0" maxWidth="800.0" minHeight="400.0"
+               minViewportHeight="100.0" minWidth="800.0" prefHeight="400.0" prefViewportHeight="200.0"
+               prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.halignment="CENTER"
+               GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+      <GridPane alignment="CENTER" maxHeight="400.0" maxWidth="800.0" minHeight="400.0" minWidth="800.0"
+                prefHeight="400.0" prefWidth="800.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints/>
          </columnConstraints>
-         <rowConstraints>
-            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <Button fx:id="editButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="secondary" text="Փոփոխել" textAlignment="CENTER" GridPane.halignment="LEFT">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </Button>
-            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </Button>
-            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </Button>
-         </children>
       </GridPane>
-   </children>
+   </ScrollPane>
+   <GridPane alignment="TOP_CENTER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"
+             GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+      <columnConstraints>
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints valignment="CENTER" vgrow="SOMETIMES"/>
+      </rowConstraints>
+      <Button fx:id="editButton" contentDisplay="CENTER" mnemonicParsing="false"
+              text="Փոփոխել" textAlignment="CENTER" GridPane.halignment="LEFT">
+         <font>
+            <Font size="22.0"/>
+         </font>
+      </Button>
+      <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել"
+              textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+         <font>
+            <Font size="22.0"/>
+         </font>
+      </Button>
+      <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false"
+              text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2"
+              GridPane.halignment="RIGHT">
+         <font>
+            <Font size="22.0"/>
+         </font>
+      </Button>
+   </GridPane>
 </fx:root>
