--- a/src/main/resources/com/fitness/fragment/subscription/add_subscription.fxml
+++ b/src/main/resources/com/fitness/fragment/subscription/add_subscription.fxml
@@ -1,100 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<fx:root hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <columnConstraints>
-      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
-      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints maxHeight="1.7976931348623157E308" valignment="CENTER" vgrow="ALWAYS" />
-   </rowConstraints>
-   <children>
-      <Label styleClass="header1" text="Ավելացնել աբոնեմենտ" GridPane.columnSpan="2147483647" />
-      <Label styleClass="paragraph" text="Անուն" GridPane.rowIndex="1" />
-      <TextField fx:id="nameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-      <Label styleClass="paragraph" text="Ընդհանուր արժեք" GridPane.rowIndex="2" />
-      <Label fx:id="totalPriceLabel" styleClass="paragraph" text="0 դրամ" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-      <GridPane hgap="5.0" vgap="5.0" GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-        <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
-          <ColumnConstraints hgrow="ALWAYS" maxWidth="800.0" minWidth="400.0" prefWidth="500.0" />
-            <ColumnConstraints hgrow="ALWAYS" maxWidth="350.0" minWidth="150.0" prefWidth="250.0" />
-          <ColumnConstraints hgrow="ALWAYS" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints />
-          <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="deleteEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-            <TableView fx:id="subscriptionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<fx:root hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0"
+         xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <columnConstraints>
+        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS"/>
+        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+        <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+        <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+        <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+        <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+        <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+        <RowConstraints maxHeight="1.7976931348623157E308" valignment="CENTER" vgrow="ALWAYS"/>
+    </rowConstraints>
+    <Label styleClass="header1" text="Ավելացնել աբոնեմենտ" GridPane.columnSpan="2147483647"/>
+    <Label text="Անուն" GridPane.rowIndex="1"/>
+    <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.halignment="RIGHT"
+               GridPane.rowIndex="1"/>
+    <Label styleClass="paragraph" text="Ընդհանուր արժեք" GridPane.rowIndex="2"/>
+    <Label fx:id="totalPriceLabel" styleClass="paragraph" text="0 դրամ" GridPane.columnIndex="1"
+           GridPane.halignment="RIGHT" GridPane.rowIndex="2"/>
+    <GridPane hgap="5.0" vgap="5.0" GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT" GridPane.rowIndex="4"
+              GridPane.valignment="CENTER">
+      <columnConstraints>
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="-Infinity"/>
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="800.0" minWidth="400.0" prefWidth="500.0"/>
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="350.0" minWidth="150.0" prefWidth="250.0"/>
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="500.0" minWidth="150.0" prefWidth="250.0"/>
+      </columnConstraints>
+      <rowConstraints>
+          <RowConstraints/>
+          <RowConstraints vgrow="SOMETIMES"/>
+          <RowConstraints vgrow="SOMETIMES"/>
+          <RowConstraints vgrow="SOMETIMES"/>
+          <RowConstraints vgrow="SOMETIMES"/>
+      </rowConstraints>
+        <children>
+          <Button fx:id="deleteEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել"
+                  GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
+          <TableView fx:id="subscriptionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0"
+                     GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="RIGHT"
+                     GridPane.rowIndex="1" GridPane.valignment="CENTER">
               <columns>
-                <TableColumn fx:id="employmentColumn" maxWidth="800.0" minWidth="400.0" prefWidth="500.0" text="Ծառայություն" />
-                <TableColumn fx:id="quantityColumn" maxWidth="350.0" minWidth="150.0" prefWidth="250.0" text="Քանակ" />
-                  <TableColumn fx:id="priceColumn" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Գին" />
+                  <TableColumn fx:id="employmentColumn" maxWidth="800.0" minWidth="400.0" prefWidth="500.0"
+                               text="Ծառայություն"/>
+                  <TableColumn fx:id="quantityColumn" maxWidth="350.0" minWidth="150.0" prefWidth="250.0"
+                               text="Քանակ"/>
+                  <TableColumn fx:id="priceColumn" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Գին"/>
               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-            </TableView>
-            <Button fx:id="addEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ավելացնել" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-            <Label text="Ծառայություն" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <ComboBox fx:id="employmentComboBox" maxWidth="800.0" minWidth="400.0" prefWidth="500.0" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
-               <GridPane.margin>
-                  <Insets top="5.0" />
-               </GridPane.margin></ComboBox>
-            <Label text="Քանակ" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="quantityTextField" maxWidth="350.0" minWidth="150.0" prefWidth="250.0" styleClass="textField" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
-               <GridPane.margin>
-                  <Insets top="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Գին" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="priceTextField" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" styleClass="textField" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
-               <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </GridPane.margin></TextField>
-         </children>
-      </GridPane>
-      <Button fx:id="previousButton" mnemonicParsing="false" styleClass="secondary" text="Հետ" GridPane.rowIndex="6" />
-      <Button fx:id="addSubscriptionButton" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
-   </children>
+              <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+              </columnResizePolicy>
+              <GridPane.margin>
+                  <Insets/>
+              </GridPane.margin>
+          </TableView>
+          <Button fx:id="addEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ավելացնել"
+                  wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER"/>
+          <Label text="Ծառայություն" GridPane.columnIndex="1" GridPane.rowIndex="2">
+              <GridPane.margin>
+                  <Insets left="5.0"/>
+              </GridPane.margin>
+          </Label>
+          <ComboBox fx:id="employmentComboBox" maxWidth="800.0" minWidth="400.0" prefWidth="500.0"
+                    GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER"
+                    GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER"
+                    GridPane.vgrow="ALWAYS">
+              <GridPane.margin>
+                  <Insets top="5.0"/>
+              </GridPane.margin>
+          </ComboBox>
+          <Label text="Քանակ" GridPane.columnIndex="1" GridPane.rowIndex="3">
+              <GridPane.margin>
+                  <Insets left="5.0"/>
+              </GridPane.margin>
+          </Label>
+          <TextField fx:id="quantityTextField" maxWidth="350.0" minWidth="150.0" prefWidth="250.0"
+                     styleClass="textField" GridPane.columnIndex="2" GridPane.columnSpan="2147483647"
+                     GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3"
+                     GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+              <GridPane.margin>
+                  <Insets top="5.0"/>
+              </GridPane.margin>
+          </TextField>
+          <Label text="Գին" GridPane.columnIndex="1" GridPane.rowIndex="4">
+              <GridPane.margin>
+                  <Insets left="5.0"/>
+              </GridPane.margin>
+          </Label>
+          <TextField fx:id="priceTextField" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" styleClass="textField"
+                     GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER"
+                     GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER"
+                     GridPane.vgrow="ALWAYS">
+              <GridPane.margin>
+                  <Insets bottom="5.0" top="5.0"/>
+              </GridPane.margin>
+          </TextField>
+        </children>
+    </GridPane>
+    <Button fx:id="previousButton" mnemonicParsing="false" styleClass="secondary" text="Հետ" GridPane.rowIndex="6"/>
+    <Button fx:id="addSubscriptionButton" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" wrapText="true"
+            GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER"/>
+    <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3"/>
+    <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5"/>
 </fx:root>
