--- a/src/main/resources/com/fitness/fragment/enter/with_card.fxml
+++ b/src/main/resources/com/fitness/fragment/enter/with_card.fxml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+
 <fx:root hgap="5.0" style="-fx-background-color: #F3F3F3;" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
-      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
-      <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" />
+      <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" />
+      <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
@@ -30,27 +39,22 @@
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints vgrow="SOMETIMES" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="193.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="193.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="193.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="193.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="193.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+      <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
    <children>
       <Label styleClass="header1" text="Մուտք քարտով" GridPane.columnSpan="4" />
-      <Label alignment="CENTER" contentDisplay="CENTER" styleClass="paragraph" text="Քարտի համար" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <TextField fx:id="cardTextField" alignment="CENTER" styleClass="textField" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+      <Label alignment="CENTER" contentDisplay="CENTER" text="Քարտի համար" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <TextField fx:id="cardTextField" alignment="CENTER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <font>
             <Font size="18.0" />
          </font>
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
-         </GridPane.margin></TextField>
-      <Label styleClass="paragraph" text="Ծառայություն" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <ComboBox fx:id="employmentComboBox" styleClass="combo-box" visibleRowCount="5" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         </GridPane.margin>
+      </TextField>
+      <Label text="Ծառայություն" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <ComboBox fx:id="employmentComboBox" visibleRowCount="5" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -58,8 +62,8 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </ComboBox>
-      <Label styleClass="paragraph" text="Աշխատող" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <ComboBox fx:id="employeeComboBox" styleClass="combo-box" visibleRowCount="5" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+      <Label text="Աշխատող" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <ComboBox fx:id="employeeComboBox" visibleRowCount="5" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -67,48 +71,56 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </ComboBox>
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="4">
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" top="5.0" />
-         </GridPane.margin></Separator>
-      <Label styleClass="header2" text="Հաճախորդի տվյալներ" GridPane.columnSpan="4" GridPane.rowIndex="5">
+         </GridPane.margin>
+      </Separator>
+      <Label styleClass="header2" text="Հաճախորդի տվյալներ" GridPane.columnSpan="4" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="5.0" />
+         </GridPane.margin>
+      </Label>
+      <Label text="Անուն Ազգանուն" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <Label text="Հեռախոս" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+      <Label text="Հեռախոս 2֊րդ" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+      <Label text="Հասցե" GridPane.rowIndex="11" />
+      <Label text="Աբոնեմենտ" GridPane.columnSpan="2" GridPane.rowIndex="13" />
+      <Label text="Վերջին այց" GridPane.columnSpan="2" GridPane.rowIndex="15" />
+      <Label fx:id="fullNameLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="6" />
+      <Label fx:id="phoneLabel" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+         <GridPane.margin>
+            <Insets />
          </GridPane.margin></Label>
-      <Label styleClass="paragraph" text="Անուն Ազգանուն" GridPane.columnSpan="2" GridPane.rowIndex="6" />
-      <Label styleClass="paragraph" text="Հեռախոս" GridPane.columnSpan="2" GridPane.rowIndex="8" />
-      <Label styleClass="paragraph" text="Հեռախոս 2֊րդ" GridPane.columnSpan="2" GridPane.rowIndex="10" />
-      <Label styleClass="paragraph" text="Հասցե" GridPane.rowIndex="12" />
-      <Label styleClass="paragraph" text="Աբոնեմենտ" GridPane.columnSpan="2" GridPane.rowIndex="14" />
-      <Label styleClass="paragraph" text="Վերջին այց" GridPane.columnSpan="2" GridPane.rowIndex="16" />
-      <Label fx:id="fullNameLabel" styleClass="info" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="7" />
-      <Label fx:id="phoneLabel" styleClass="info" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="9" />
-      <Label fx:id="phone2Label" styleClass="info" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="10" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="11" />
-      <Label fx:id="addressLabel" text="" GridPane.columnIndex="3" GridPane.rowIndex="12" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="13" />
-      <Label fx:id="subscriptionLabel" styleClass="info" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="14" />
-      <Separator GridPane.columnSpan="4" GridPane.rowIndex="15" />
-      <Label fx:id="lastVisitLabel" styleClass="info" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="16" />
-      <TableView fx:id="employmentQuantityTable" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="17" GridPane.valignment="CENTER">
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="8" />
+      <Label fx:id="phone2Label" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="9" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="10" />
+      <Label fx:id="addressLabel" text="" GridPane.columnIndex="2" GridPane.rowIndex="11" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="12" />
+      <Label fx:id="subscriptionLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
+      <Separator GridPane.columnSpan="4" GridPane.rowIndex="14" />
+      <Label fx:id="lastVisitLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="15" />
+      <TableView fx:id="employmentQuantityTable" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="16" GridPane.valignment="CENTER">
         <columns>
           <TableColumn fx:id="employmentColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="500.0" text="Ծառայություն" />
           <TableColumn fx:id="quantityColumn" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="500.0" text="Քանակ" />
         </columns>
          <GridPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+            <Insets top="10.0" />
          </GridPane.margin>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="enterButton" mnemonicParsing="false" styleClass="primary" text="Մուտք" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="18" />
-      <CheckBox fx:id="bonusCheckBox" mnemonicParsing="false" text="Բոնուս" GridPane.rowIndex="18">
+      <Button fx:id="enterButton" mnemonicParsing="false" styleClass="primary" text="Մուտք" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="17" />
+      <CheckBox fx:id="bonusCheckBox" mnemonicParsing="false" text="Բոնուս" GridPane.rowIndex="17">
          <font>
             <Font size="23.0" />
          </font>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </CheckBox>
    </children>
 </fx:root>
