--- a/src/main/resources/com/fitness/fragment/customer/edit_customer.fxml
+++ b/src/main/resources/com/fitness/fragment/customer/edit_customer.fxml
@@ -28,22 +28,22 @@
          </GridPane.margin>
       </Label>
       <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-      <Label styleClass="paragraph" text="Քարտի համար *" GridPane.rowIndex="2" />
-      <TextField fx:id="cardTextField" editable="false" styleClass="textField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-      <Label styleClass="paragraph" text="Անուն *" GridPane.rowIndex="3" />
-      <TextField fx:id="nameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-      <Label styleClass="paragraph" text="Ազգանուն *" GridPane.rowIndex="4" />
-      <TextField fx:id="surnameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-      <Label styleClass="paragraph" text="Հեռախոս *" GridPane.rowIndex="5" />
-      <Label styleClass="paragraph" text="Հեռախոս 2-րդ" GridPane.rowIndex="6" />
-      <Label styleClass="paragraph" text="Հասցե *" GridPane.rowIndex="7" />
-      <TextField fx:id="addressTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-      <Label styleClass="paragraph" text="Աբոնեմենտ *" GridPane.rowIndex="9" />
-      <ComboBox fx:id="subscriptionComboBox" maxWidth="1.7976931348623157E308" styleClass="combo-box" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="9" GridPane.valignment="CENTER">
+      <Label text="Քարտի համար *" GridPane.rowIndex="2" />
+      <TextField fx:id="cardTextField" editable="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <Label text="Անուն *" GridPane.rowIndex="3" />
+      <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <Label text="Ազգանուն *" GridPane.rowIndex="4" />
+      <TextField fx:id="surnameTextField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <Label text="Հեռախոս *" GridPane.rowIndex="5" />
+      <Label text="Հեռախոս 2-րդ" GridPane.rowIndex="6" />
+      <Label text="Հասցե *" GridPane.rowIndex="7" />
+      <TextField fx:id="addressTextField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <Label text="Աբոնեմենտ *" GridPane.rowIndex="9" />
+      <ComboBox fx:id="subscriptionComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="9" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></ComboBox>
-      <Button fx:id="previousButton" mnemonicParsing="false" styleClass="secondary" text="Հետ" GridPane.halignment="LEFT" GridPane.rowIndex="10" GridPane.valignment="CENTER">
+      <Button fx:id="previousButton" mnemonicParsing="false" text="Հետ" GridPane.halignment="LEFT" GridPane.rowIndex="10" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets top="5.0" />
          </GridPane.margin></Button>
