--- a/src/main/resources/com/fitness/fragment/report/report.fxml
+++ b/src/main/resources/com/fitness/fragment/report/report.fxml
@@ -6,6 +6,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -39,37 +43,75 @@
     </Label>
     <ProgressIndicator fx:id="progressIndicator" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="3" />
     <Button fx:id="getReportButton" mnemonicParsing="false" text="Ներկայացնել հաշվետվություն" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-    <ScrollPane hvalue="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
-        <GridPane fx:id="salaryGridPane" hgap="5.0" vgap="5.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="700.0" prefWidth="700.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-            </rowConstraints>
-            <Label style="-fx-font-weight: bold;" text="Ծառայություն" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                <font>
-                    <Font size="19.0" />
-                </font>
-            </Label>
-            <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints vgrow="SOMETIMES" />
-                    <RowConstraints vgrow="SOMETIMES" />
-                </rowConstraints>
-                <Label style="-fx-font-weight: bold;" text="Ընդհանուր" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                <Label style="-fx-font-weight: bold;" text="Քանակ" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                <Label style="-fx-font-weight: bold;" text="Գումար" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-            </GridPane>
-        </GridPane>
-    </ScrollPane>
-    <Button fx:id="detailButton" mnemonicParsing="false" styleClass="primary" text="Մանրամասն" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+   <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+     <tabs>
+       <Tab text="Աշխատավարձ">
+            <content>
+                <ScrollPane hvalue="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                    <GridPane fx:id="salaryGridPane" hgap="5.0" vgap="5.0">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="700.0" prefWidth="700.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" />
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints vgrow="SOMETIMES" />
+                        </rowConstraints>
+                        <Label style="-fx-font-weight: bold;" text="Ծառայություն" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                            <font>
+                                <Font size="19.0" />
+                            </font>
+                        </Label>
+                        <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" />
+                                <ColumnConstraints hgrow="SOMETIMES" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints vgrow="SOMETIMES" />
+                                <RowConstraints vgrow="SOMETIMES" />
+                            </rowConstraints>
+                            <Label style="-fx-font-weight: bold;" text="Ընդհանուր" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                            <Label style="-fx-font-weight: bold;" text="Քանակ" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                            <Label style="-fx-font-weight: bold;" text="Գումար" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        </GridPane>
+                    </GridPane>
+                </ScrollPane>
+            </content>
+       </Tab>
+         <Tab text="Պատմություն">
+             <GridPane>
+                 <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" />
+                     <ColumnConstraints hgrow="SOMETIMES" />
+                 </columnConstraints>
+                 <rowConstraints>
+                     <RowConstraints vgrow="SOMETIMES" />
+                     <RowConstraints vgrow="NEVER" />
+                 </rowConstraints>
+                 <TableView fx:id="historyTableView" prefHeight="200.0" GridPane.columnSpan="2147483647">
+                     <columns>
+                         <TableColumn fx:id="dateColumn" minWidth="130.0" prefWidth="130.0" text="Ամսաթիվ" />
+                         <TableColumn fx:id="cardColumn" minWidth="100.0" prefWidth="100.0" text="Քարտ" />
+                         <TableColumn fx:id="nameColumn" minWidth="220.0" prefWidth="220.0" text="Անուն Ազգանուն" />
+                         <TableColumn fx:id="employmentColumn" minWidth="180.0" prefWidth="180.0" text="Ծառայություն" />
+                         <TableColumn fx:id="employeeColumn" minWidth="130.0" prefWidth="130.0" text="Աշխատող" />
+                         <TableColumn fx:id="subscriptionColumn" minWidth="140.0" prefWidth="140.0" text="Աբոնեմենտ" />
+                         <TableColumn fx:id="priceColumn" minWidth="100.0" prefWidth="100.0" text="Գումար" />
+                     </columns>
+                  <GridPane.margin>
+                     <Insets bottom="5.0" />
+                  </GridPane.margin>
+                  <columnResizePolicy>
+                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                  </columnResizePolicy>
+                 </TableView>
+                 <Button mnemonicParsing="false" text="Ջնջել" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+                 <Button mnemonicParsing="false" text="Փոփոխել" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+             </GridPane>
+         </Tab>
+     </tabs>
+   </TabPane>
     <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -81,7 +123,7 @@
         </rowConstraints>
         <Label text="Այցերի քանակ" />
         <Label text="Ընդհանուր գումար" GridPane.rowIndex="1" />
-        <Label fx:id="visitsQuantityLabel" text="0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-        <Label fx:id="totalPriceLabel" text="0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+        <Label fx:id="visitsQuantityLabel" text="0 այց" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+        <Label fx:id="totalPriceLabel" text="0 դրամ" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
     </GridPane>
 </fx:root>
